--- a/SecondhandBooks/src/main/resources/application.properties
+++ b/SecondhandBooks/src/main/resources/application.properties
@@ -15,3 +15,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
 
+
+# File Upload Limits
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=50MB
