--- a/SecondhandBooks/build.gradle
+++ b/SecondhandBooks/build.gradle
@@ -36,3 +36,7 @@ dependencies {
     
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
