--- a/SecondhandBooks/frontend/Vue/package.json
+++ b/SecondhandBooks/frontend/Vue/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "vue": "^3.5.22"
