--- a/SecondhandBooks/build.gradle
+++ b/SecondhandBooks/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
-tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
-}
+// tasks.withType(JavaCompile) {
+//     options.encoding = 'UTF-8'
+//     options.compilerArgs << '-parameters'
+// }
