--- a/SecondhandBooks/build.gradle
+++ b/SecondhandBooks/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.2.0' // 或其他支援 Java 21 的版本
-    id 'io.spring.dependency-management' version '1.1.4'
+    id 'org.springframework.boot' version '3.5.8'
+    // id 'io.spring.dependency-management' version '1.1.4'
 }
 
 group = 'com.example'
@@ -22,18 +22,22 @@ repositories {
 }
 
 dependencies {
+    implementation platform('org.springframework.boot:spring-boot-dependencies:3.5.8')
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     // 用於輸入驗證
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+    // API 文件 (Swagger)
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'
     
     // MySQL 驅動
     runtimeOnly 'com.mysql:mysql-connector-j'
     
-    // Lombok (簡化 Getter/Setter)
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
-    
+   
+
+    //測試
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
